# turplanlegger-api

./: .MANIFEST.in  .envrc  .flaskenv  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  Dockerfile-prod  LICENSE  MANIFEST.in  README.md  config_template.conf  conftest.py  dev.Dockerfile  docker-compose-test.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  flake.nix  install.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.Dockerfile  wsgi.py
.flox/: env.json
.flox/env/: manifest.toml
.github/: dependabot.yml
.github/workflows/: authentication-script.py  build-docker-image-pr.yaml  deploy-check.yaml  develop_turplanlegger-dev.yml  docker-build-pr.yaml  pr-checks.yml  publish-docker-image.yaml  publish-git-tags.yaml  release.yaml  test.yml
deploy/: check_version.sh  deploy-develop.sh  deploy.sh  env
mock/: admin_login.sh  list_add_items.sh  list_change_owner.sh  list_change_toggle_check.sh  list_change_transition_state.sh  list_create.sh  list_create_failed.sh  list_rename.sh  user_create.sh  user_login.sh
tests/: test_admin.py  test_database.py  test_item_lists.py  test_item_lists_permission.py  test_note.py  test_note_permissions.py  test_result.csv  test_route.py  test_route_permissions.py  test_trip.py  test_trip_permissions.py  test_users.py  test_users_permissions.py
turplanlegger/: __about__.py  __init__.py  app.py  errors.py  exceptions.py
turplanlegger/.github/: dependabot.yml
turplanlegger/auth/: __init__.py  decorators.py  login.py  utils.py
turplanlegger/database/: base.py  schema.sql
turplanlegger/models/: access_level.py  item_lists.py  list_item.py  list_items.py  lists.py  note.py  permission.py  route.py  token.py  trip.py  trip_date.py  user.py
turplanlegger/utils/: admin_user.py  config.py  cors.py  default_config.py  http_client.py  logger.py  response.py  types.py
turplanlegger/views/: __init__.py  item_lists.py  lists.py  notes.py  routes.py  trips.py  users.py
