[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Turplanlegger-API"
dynamic = ["version"]
description = "Turplanlegger python API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Are Schjetne", email = "are.schjetne@gmail.com" },
    { name = "Petter Bjørkås", email = "peseb@icloud.com" },
    { name = "Martin Høgli", email = "martin.lindelien@gmail.com" },
]
keywords = [
    "planning",
    "trip",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "bcrypt==4.1.2",
    "Flask==3.0.0",
    "flask-cors==4.0.0",
    "psycopg==3.1.17",
    "psycopg[pool]==3.1.17",
    "PyJWT==2.8.0",
    "cryptography==41.0.7",
    "httpx==0.26.0"
]
[project.optional-dependencies]
dev = [
    "hatch==1.9.1",
    "pre-commit==3.6.0",
    "pytest==8.0.0",
    "pytest-cov==4.1.0",
    "wheel==0.42.0",
    "ruff==v0.1.11"
]
prod = [
    "gunicorn[gthread]==21.2.0",
    "psycopg[c]==3.1.17"
]

[project.urls]
Homepage = "https://github.com/Turplanlegger/turplanlegger"

[tool.hatch.version]
path = "turplanlegger/__about__.py"

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=turplanlegger --cov=tests {args}"
no-cov = "cov --no-cov {args}"
lint = "pre-commit run -a --show-diff-on-failure"

[tool.coverage.run]
branch = true
parallel = true

[tool.hatch.build.targets.sdist]
include = [
    "/turplanlegger",
]

[tool.hatch.build.targets.wheel]
include = [
    "/turplanlegger",
]

[tool.ruff]
select = ["E", "W", "Q", "I", "F", "YTT", "C4", "T10", "ISC", "ICN", "RSE"]
line-length = 120
target-version = "py312"

[tool.ruff.flake8-quotes]
inline-quotes = "single"
