[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Turplanlegger-API"
dynamic = ["version"]
description = "Turplanlegger python API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Are Schjetne", email = "are.schjetne@gmail.com" },
    { name = "Petter Bjørkås", email = "peseb@icloud.com" },
    { name = "Martin Høgli", email = "martin.lindelien@gmail.com" },
]
keywords = [
    "planning",
    "trip",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "ujson==5.11.0",
    "bcrypt==4.3.0",
    "Flask==3.1.2",
    "flask-cors==6.0.1",
    "psycopg==3.2.12",
    "PyJWT==2.10.1",
    "cryptography==46.0.3",
    "httpx==0.28.1"
]
[project.optional-dependencies]
dev = [
    "hatch==1.15.1",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "ruff==v0.14.1",
    "wheel==0.45.1"
]
prod = [
    "gunicorn[gthread]==23.0.0",
    "psycopg[c]==3.2.11"
]

[project.urls]
Homepage = "https://github.com/Turplanlegger/turplanlegger"

[tool.hatch.version]
path = "turplanlegger/__about__.py"

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=turplanlegger --cov=tests {args}"
no-cov = "cov --no-cov {args}"
lint = "ruff check"
format = "ruff format --diff --no-cache"

[tool.coverage.run]
branch = true
parallel = true

[tool.hatch.build.targets.sdist]
include = [
    "/turplanlegger",
]

[tool.hatch.build.targets.wheel]
include = [
    "/turplanlegger",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "Q", "I", "F", "YTT", "C4", "T10", "ICN", "RSE"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"
